# shiftai-agentic-python-sdk

./: README.md  pyproject.toml  setup.py
shiftai/: __init__.py  client.py
shiftai/__pycache__/: __init__.cpython-312.pyc.2099084612784
shiftai/api/: __init__.py  agents_api.py  analytics_api.py  conversations_api.py  messages_api.py  platform_api.py  platform_session_api.py  users_api.py
shiftai/api/internal/: __init__.py  trulens_api.py
shiftai/http/: __init__.py  exceptions.py  http_client.py
shiftai/models/: __init__.py
shiftaiagenticinfra_sdk_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_integration.py
