[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiftaiagenticinfra-sdk-python"
version = "0.0.4"
description = "Shiftai Agentic Infra Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ShiftAI", email = "s.tadakamalla@theshiftai.in"}
]
keywords = ["shiftAI","agentic_infra","shiftaiagenticinfra", "shiftaiagenticinfra_sdk","agenticinfra_sdk", "infrastructure", "sdk", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["shiftai", "shiftai.api", "shiftai.api.internal", "shiftai.http","shiftai.models"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Website = "https://theshiftai.in"
LinkedIn = "https://www.linkedin.com/company/theshiftai-in"


